FEATURE: Core | Persistence of download and tracker stats for shares [Parg]
FEATURE: Core | Advanced network settings: MTU, SO_RCVBUF, SO_SNDBUF, IPTOS [Nolar]
FEATURE: UI   | Option to show confirmation dialog on torrent Removal [Nolar]
FEATURE: UI   | Added Seed2PeerRatio item to MyTorrents view [Nolar]

CHANGE: Core | Support azureus.install.path parameter, used by new linux launcher script [Nolar]
CHANGE: UI   | Create torrent wizard now initially defaults torrent save path from "save to" default [Parg]
CHANGE: Core | Moved config items for tracker client overrides + UDP to tracker client config [Parg]
CHANGE: UI   | Obey "start stopped" config item for dropped torrents [Parg]
CHANGE: UI   | Torrents no longer need to be stopped before removal is allowed [Nolar]

BUGFIX: Core | Fix for kernel panics under MacOSX [ej32206, Nolar]
BUGFIX: UI   | Old language files in user dir causing !missing! item texts [Nolar]
BUGFIX: UI   | Fix for window state not being remembered between sessions [Nolar]
BUGFIX: UI   | Fix for messages window being closed while animated [Gudy]
BUGFIX: UI   | Fix for BUG 1059432 : Download bars spawning multiple times when set to auto open [Gudy]
BUGFIX: UI   | Fix for BUG 1061538 : /0 error if no pieces [Parg]
BUGFIX: Core | Handle passing of torrents to already running but not fully initialised process better [Parg]
BUGFIX: UI   | Fix create-torrent wizard to remember paths properly [Parg]
BUGFIX: Core | Default save dir was defaulting to ON, changed to OFF [Parg]
BUGFIX: Core | Tidied up UPnP error handing if action missing [Parg]
BUGFIX: UI   | Fixed up opening of torrent files not ending in ".tor" or ".torrent" [Parg]
BUGFIX: Core | Scrape mult-tracker torrents correctly when download not running [Parg]
BUGFIX: Core | Upload/download/share ratio frig for newly added seeds made consistent [Parg]
BUGFIX: Core | Fix for stalls from system clock being set backwards in time [Nolar]